# studio-serial-gatt-poc

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json
libs/zmk-studio-rpc/: Cargo.toml  build.rs
libs/zmk-studio-rpc-web/: Cargo.toml
libs/zmk-studio-rpc-web/src/: lib.rs
libs/zmk-studio-rpc-web/src/bluetooth/: mod.rs
libs/zmk-studio-rpc-web/src/serial/: mod.rs
libs/zmk-studio-rpc/src/: lib.rs
src/: lib.rs
static/: index.html
studio-msgs/rust/src/: lib.rs  serialization.rs
studio-msgs/wasm/src/: lib.rs
